--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,47 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@use './theme.scss' as nostria-theme;
 
 html {
-  @include mat.theme((
-    color: (
-      theme-type: light,
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
-}/* You can add global styles to this file, and also import other style files */
+  --mat-success-color: #4caf50;
+  --mat-success-lighter: #c8e6c9;
+  --mat-success-darker: #2e7d32;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  @include mat.theme((color: (theme-type: light,
+        primary: nostria-theme.$primary-palette,
+        tertiary: nostria-theme.$tertiary-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    ));
+
+}
+
+.dark {
+  --mat-success-color: #66bb6a;
+  --mat-success-lighter: #a5d6a7;
+  --mat-success-darker: #388e3c;
+
+  @include mat.theme((color: (theme-type: dark,
+        primary: nostria-theme.$primary-palette )));
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+a {
+  color: var(--mdc-text-button-label-text-color, var(--mat-sys-primary));
+  text-decoration: none;
+}
+
+a:hover {
+  transition: text-decoration 250ms ease;
+  transition: color 250ms ease;
+  color: var(--mat-sys-inverse-primary);
+}
