--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <mat-card>
   <mat-card-header>
     <mat-card-title>About</mat-card-title>
@@ -7,3 +8,4 @@
     <p>Version: {{ version }}</p>
   </mat-card-content>
 </mat-card>
+</div>
