--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,10 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Home</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <p>Welcome to the home page!</p>
-  </mat-card-content>
-</mat-card>
+<div class="content">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Home</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>Welcome to the home page!</p>
+    </mat-card-content>
+  </mat-card>
+</div>
