--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div class="app-container" [class.dark-theme]="themeService.darkMode()">
   <!-- Top toolbar - now outside and above the sidenav container -->
   <mat-toolbar color="primary" class="app-toolbar">
-    <button
-      mat-icon-button
-      (click)="toggleSidenav()"
-      aria-label="Toggle sidenav">
+    <button mat-icon-button (click)="toggleSidenav()" aria-label="Toggle sidenav">
       <mat-icon>menu</mat-icon>
     </button>
     <span class="app-title">{{title}}</span>
@@ -15,25 +12,36 @@
   </mat-toolbar>
 
   <!-- Sidenav container now below the toolbar -->
-  <mat-sidenav-container class="sidenav-container">
+  <mat-sidenav-container class="sidenav-container" autosize="true">
     <!-- Side navigation -->
-    <mat-sidenav 
-      #sidenav 
-      class="sidenav" 
-      [opened]="opened()" 
+    <mat-sidenav
+     #sidenav class="sidenav" 
+     [ngClass]="{ 'sidenav-labels': displayLabels(), 'sidenav-small': !displayLabels()  }"
+     [opened]="opened()"
       [mode]="isHandset() ? 'over' : 'side'"
       [fixedInViewport]="false">
-      <mat-toolbar>Menu</mat-toolbar>
       <mat-nav-list>
         @for (item of navItems; track item.path) {
-          <a mat-list-item 
-             [routerLink]="[item.path]" 
-             routerLinkActive="active-link" 
-             (click)="isHandset() ? toggleSidenav() : null">
-            <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
-            <span class="nav-label">{{item.label}}</span>
-          </a>
+        <a mat-list-item [routerLink]="[item.path]" routerLinkActive="active-link"
+          (click)="isHandset() ? toggleSidenav() : null">
+          <mat-icon matListItemIcon>{{item.icon}}</mat-icon>
+          @if(displayLabels()) {
+          <span class="nav-label">{{item.label}}</span>
+          }
+
+        </a>
         }
+
+        <a mat-list-item (click)="toggleMenuSize()">
+          @if (displayLabels()) {
+          <mat-icon>chevron_left</mat-icon>
+          } @else {
+          <mat-icon>chevron_right</mat-icon>
+
+          }
+
+        </a>
+
       </mat-nav-list>
     </mat-sidenav>
 
@@ -48,19 +56,17 @@
 
   <!-- Mobile navigation footer -->
   @if (isHandset()) {
-    <div class="mobile-nav">
-      @for (item of navItems; track item.path) {
-        <a mat-button class="mobile-nav-button" 
-          [routerLink]="[item.path]" 
-          routerLinkActive="active-link">
-          <mat-icon>{{item.icon}}</mat-icon>
-          <div class="mobile-nav-label">{{item.label}}</div>
-        </a>
-      }
-      <button mat-button class="mobile-nav-button" (click)="themeService.toggleDarkMode()">
-        <mat-icon>{{ themeService.darkMode() ? 'light_mode' : 'dark_mode' }}</mat-icon>
-        <div class="mobile-nav-label">Theme</div>
-      </button>
-    </div>
+  <div class="mobile-nav">
+    @for (item of navItems; track item.path) {
+    <a mat-button class="mobile-nav-button" [routerLink]="[item.path]" routerLinkActive="active-link">
+      <mat-icon>{{item.icon}}</mat-icon>
+      <div class="mobile-nav-label">{{item.label}}</div>
+    </a>
+    }
+    <button mat-button class="mobile-nav-button" (click)="themeService.toggleDarkMode()">
+      <mat-icon>{{ themeService.darkMode() ? 'light_mode' : 'dark_mode' }}</mat-icon>
+      <div class="mobile-nav-label">Theme</div>
+    </button>
+  </div>
   }
 </div>
