--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -11,7 +11,7 @@
         <div class="login-options">
           <mat-card class="login-card" (click)="generateNewKey()">
             <mat-card-header>
-              <mat-card-title>New to Nostr</mat-card-title>
+              <mat-card-title>New Nostr account</mat-card-title>
             </mat-card-header>
             <mat-card-content>
               <p>Generate a new Nostr private key</p>
@@ -38,7 +38,7 @@
           
           <mat-card class="login-card" (click)="usePreviewAccount()">
             <mat-card-header>
-              <mat-card-title>Preview</mat-card-title>
+              <mat-card-title>Preview Nostria</mat-card-title>
             </mat-card-header>
             <mat-card-content>
               <p>Try Nostria with a demo account</p>
