--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,6 +78,10 @@
             <mat-icon matListItemIcon>person</mat-icon>
             <span>My Profile</span>
           </a>
+          <a mat-list-item routerLink="/credentials" (click)="isHandset() ? toggleProfileSidenav() : null">
+            <mat-icon matListItemIcon>key</mat-icon>
+            <span>Credentials</span>
+          </a>
           <a mat-list-item (click)="logout(); toggleProfileSidenav()">
             <mat-icon matListItemIcon>logout</mat-icon>
             <span>Logout</span>
