feat: refactor key display logic to use dedicated getter methods for public and private keys

--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -10,10 +10,10 @@
       
       <mat-card-content>
         <div class="key-display">
-          <div class="key-value">{{ nostrService.currentUser()?.pubkey }}</div>
+          <div class="key-value">{{ getNpub() }}</div>
           <button mat-icon-button 
                   matTooltip="Copy npub to clipboard"
-                  (click)="copyToClipboard(nostrService.currentUser()?.pubkey || '', 'Public key')">
+                  (click)="copyToClipboard(getNpub(), 'Public key')">
             <mat-icon>content_copy</mat-icon>
           </button>
         </div>
@@ -34,9 +34,9 @@
           <div class="key-display">
             <div class="key-value private-key">
               @if (isNsecVisible()) {
-                {{ nostrService.currentUser()?.privkey }}
+                {{ getNsec() }}
               } @else {
-                {{ getMaskedNsec(nostrService.currentUser()?.privkey || '') }}
+                {{ getMaskedNsec(getNsec()) }}
               }
             </div>
             <div class="key-actions">
@@ -47,7 +47,7 @@
               </button>
               <button mat-icon-button 
                      matTooltip="Copy private key to clipboard"
-                     (click)="copyToClipboard(nostrService.currentUser()?.privkey || '', 'Private key')">
+                     (click)="copyToClipboard(getNsec(), 'Private key')">
                 <mat-icon>content_copy</mat-icon>
               </button>
             </div>
