feat: update nsec warning message for clarity and change preview public key to a generated value

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -77,7 +77,7 @@
         
         <div class="nsec-warning">
           <p>⚠️ Your private key will be stored locally on your device.</p>
-          <p>This form is configured to prevent password managers from saving your key.</p>
+          <p>This form is configured to try and prevent password managers from saving your key. If your browser suggests to save, reject it.</p>
         </div>
       </div>
       
