--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,6 +103,7 @@
   @if (isHandset()) {
   <div class="mobile-nav">
     @for (item of navItems; track $index) {
+    @if (item.showInMobile) {
     <a mat-button class="mobile-nav-button" 
        [routerLink]="item.action ? undefined : [item.path]" 
        routerLinkActive="active-link"
@@ -110,6 +111,7 @@
       <mat-icon>{{item.icon}}</mat-icon>
       <div class="mobile-nav-label">{{item.label}}</div>
     </a>
+    }
     }
     <button mat-button class="mobile-nav-button" (click)="themeService.toggleDarkMode()">
       <mat-icon>{{ themeService.darkMode() ? 'light_mode' : 'dark_mode' }}</mat-icon>
