--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -27,7 +27,7 @@
       <p>Nostria is also accessible as desktop app:</p>
       <ul>
         <li><a href="https://github.com/sondreb/nostria/releases"
-            target="_blank">https://github.com/sondreb/nostria/releases</a></li>
+            target="_blank">Downloads</a></li>
       </ul>
 
       <h3>Architecture</h3>
