--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,6 +53,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overscroll-behavior: none;
 }
 
 // Scrollbar styling
